# monzo-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: check-monzo-auth.sh  hooks.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  publish.yml
mcp-server/: .env.example  __init__.py  auth.py  monzo_client.py  server.py  setup_auth.py  tools.py
skills/monzo/: SKILL.md  monzo-api-reference.md
