[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monzo-mcp"
version = "1.0.5"
description = "Read-only Monzo banking MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tcoretech", email = "support@tcoretech.com" },
]
keywords = ["monzo", "mcp", "banking", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
monzo-mcp = "monzo_mcp.server:main"

[project.urls]
Homepage = "https://github.com/tcoretech/monzo-mcp"
Repository = "https://github.com/tcoretech/monzo-mcp"
Issues = "https://github.com/tcoretech/monzo-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcp-server"]

[tool.hatch.build.targets.wheel.sources]
"mcp-server" = "monzo_mcp"
